--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>pizza</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>pizza</name>
-    <description>pizza</description>
+    <description>mobile pizza ordering application built with Java and Angular</description>
     <properties>
         <java.version>21</java.version>
         <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>2.2.224</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -58,6 +59,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
         </dependency>
     </dependencies>
 
