Integrate Flyway migrations, create initial tables, populate tables, return data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url =jdbc:h2:mem:DATABASE
+spring.datasource.username = sa
+spring.datasource.password = password
+spring.datasource.driverClassName = org.h2.Driver
+spring.flyway.baselineOnMigrate = true
+spring.flyway.locations=filesystem:db/migration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
