--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url =jdbc:h2:mem:DATABASE
 spring.datasource.username = sa
 spring.datasource.password = password
 spring.datasource.driverClassName = org.h2.Driver
-spring.flyway.baselineOnMigrate = true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2console/
